--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="%VITE_FAVICON%" />
+    <link rel="icon" type="image/svg+xml" href="%__FAVICON__%" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>%VITE_TITLE%App</title>
+    <title>%__APP_TITLE__%</title>
   </head>
 
   <body id="root" class="flex flex-col items-center">
